# OpenGL-Base-Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
dependencies/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw/examples/: Makefile  cmake_install.cmake
dependencies/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
dependencies/glfw/tests/: Makefile  cmake_install.cmake
resources/models/: steve.mtl
resources/shaders/: basic_fragment.fs  basic_vertex.vs
resources/textures/: my-texture-dds.DDS  uvtemplate.DDS
src/: CMakeLists.txt  ShaderLoader.cpp  ShaderLoader.h  Texture.hpp  main.cpp
src/common/: ModelLoader.cpp  ModelLoader.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  UserInput.cpp  UserInput.hpp
src/gui/: TestWindow.cpp  ToolWindow.hpp
src/model/: Graphics.hpp  Mesh.cpp  Mesh.hpp  Terrain.cpp  Terrain.hpp
